[gd_scene load_steps=14 format=3 uid="uid://ca5e5j6aydtgv"]

[ext_resource type="Texture2D" uid="uid://p31olf0l0fuu" path="res://assets/graphics/tank/hulls/prototype_tank_hull.png" id="1_brvmu"]
[ext_resource type="Texture2D" uid="uid://bbfb78rlpphmh" path="res://assets/graphics/tank/tracks/prototype_tank_track_a.png" id="1_d4h7h"]
[ext_resource type="Script" path="res://assets/scripts/tank_controller.gd" id="1_nowfy"]
[ext_resource type="Texture2D" uid="uid://c01vlhg8p8igu" path="res://assets/graphics/tank/tracks/prototype_tank_track_b.png" id="2_b00h2"]
[ext_resource type="Texture2D" uid="uid://cpj5mjp7u5g1w" path="res://assets/graphics/tank/turrets/prototype_tank_turret.png" id="3_tqnft"]
[ext_resource type="Texture2D" uid="uid://dg4j5xqy4velq" path="res://assets/graphics/tank/guns/prototype_tank_base_gun.png" id="4_fmpfi"]
[ext_resource type="Script" path="res://assets/scripts/components/tank_move_component.gd" id="6_jfyk6"]
[ext_resource type="Script" path="res://assets/scripts/state_machine/state_machine.gd" id="7_8r1wf"]
[ext_resource type="Script" path="res://assets/scripts/state_machine/states/idle.gd" id="8_w5lay"]
[ext_resource type="Script" path="res://assets/scripts/state_machine/states/driving.gd" id="9_4xhly"]
[ext_resource type="Script" path="res://assets/scripts/state_machine/states/firing.gd" id="10_e55xy"]
[ext_resource type="Script" path="res://assets/scripts/state_machine/states/reloading.gd" id="11_p740p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e2qmq"]
size = Vector2(142, 136)

[node name="Player" type="CharacterBody2D"]

[node name="Tank" type="Node2D" parent="."]
script = ExtResource("1_nowfy")
default_speed = 5000.0

[node name="Hull" type="Sprite2D" parent="Tank"]
texture = ExtResource("1_brvmu")

[node name="Turret" type="Sprite2D" parent="Tank/Hull"]
texture = ExtResource("3_tqnft")

[node name="Gun" type="Sprite2D" parent="Tank/Hull/Turret"]
show_behind_parent = true
position = Vector2(80, 0)
texture = ExtResource("4_fmpfi")

[node name="Track_left" type="Sprite2D" parent="Tank/Hull"]
show_behind_parent = true
position = Vector2(0, -55)
texture = ExtResource("1_d4h7h")

[node name="Track_right" type="Sprite2D" parent="Tank/Hull"]
show_behind_parent = true
position = Vector2(0, 55)
texture = ExtResource("2_b00h2")

[node name="Camera2D" type="Camera2D" parent="Tank"]
zoom = Vector2(0.65, 0.65)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_e2qmq")

[node name="player_settings" type="Node" parent="."]

[node name="movement_state_machine" type="Node" parent="." node_paths=PackedStringArray("starting_state")]
script = ExtResource("7_8r1wf")
starting_state = NodePath("idle")

[node name="idle" type="Node" parent="movement_state_machine" node_paths=PackedStringArray("driving_state")]
script = ExtResource("8_w5lay")
driving_state = NodePath("../driving")

[node name="driving" type="Node" parent="movement_state_machine" node_paths=PackedStringArray("idle_state")]
script = ExtResource("9_4xhly")
idle_state = NodePath("../idle")

[node name="gun_state_machine" type="Node" parent="." node_paths=PackedStringArray("starting_state")]
script = ExtResource("7_8r1wf")
starting_state = NodePath("idle")

[node name="idle" type="Node" parent="gun_state_machine"]
script = ExtResource("8_w5lay")

[node name="firing" type="Node" parent="gun_state_machine"]
script = ExtResource("10_e55xy")

[node name="reloading" type="Node" parent="gun_state_machine"]
script = ExtResource("11_p740p")

[node name="tank_move_component" type="Node" parent="."]
script = ExtResource("6_jfyk6")

[node name="systems" type="Node" parent="."]
